# solvcon

./: .gitattributes  .gitignore  .gitlab-ci.yml  .hgignore  .readthedocs.yaml  .travis-disable.yml  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  COPYING  CREDITS.rst  HISTORY.rst  INSTALL.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  SConscript  SConscript.legacy  SConstruct  build.ps1  requirements.txt  scg  setup.cfg  setup.py
.claude/: settings.json  statusline.sh
.claude/hooks/: check-source.sh
.codex/: hooks.json
.github/workflows/: check_skip_ci.yml  devbuild.yml  lint.yml  nouse_install.yml  (+4 more)
.github/workflows-backup/: solvcon_install.yml
contrib/: aptget.debian.jessie.sh  aptget.debian.sh  aptget.ubuntu.12.04LTS.doc.sh  aptget.ubuntu.12.04LTS.sh  aptget.ubuntu.14.04LTS.doc.sh  aptget.ubuntu.14.04LTS.sh  aptget.ubuntu.sh  build-pybind11-in-conda.sh  buildground-glenn.sh  buildsoil-glenn.sh  conda.sh  countloc  dockerfile  get  install-jenkins-slave  jenkins-slave  jenkins-slave-default  pch_experiment.py  release.sh  sc_rename.py  sphinx.ubuntu.12.04LTS.doc.sh  startdevsc  ubuntu-kvm  verify_legacy.sh
cython/: fake_algorithm.pxd  fake_algorithm.pyx  mesh.pxd  mesh.pyx  solvcon.pxd
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  solvcon.cron.d.ex  solvcon.default.ex  solvcon.doc-base.EX  watch.ex
doc/: Makefile  SConstruct  make.bat  requirements.txt  spell.add  spell.add.spl  spell.utf-8.add  spell.utf-8.add.spl
gcc/: Makefile  build-gcc.sh  build-gmp.sh  build-mpc.sh  build-mpfr.sh  create-scgccvars.py  scgccvars.sh
ground/: Makefile  blas.make.inc  build-atlas.sh  build-blas.sh  build-cmake.sh  build-gmp.sh  build-gmsh.sh  build-hdf.sh  build-lapack.sh  build-netcdf.sh  build-numpy.sh  build-openssl.sh  build-python.sh  build-scotch.sh  build-vtk.sh  create-scvars.py  create-scvars.sh  generate-numpy.py  get.ini  modify-pyshebang.py  pack-ground.sh  scbuildtools.sh  scotch_Makefile.inc  scotch_Makefile_darwin.inc  scotch_darwin.patch  scvars.csh  scvars.sh  start
gtests/: CMakeLists.txt  test_nopython_buffer.cpp  test_nopython_callprofiler.cpp  test_nopython_mdspan.cpp  test_nopython_pilot_history.cpp  test_nopython_pilot_keymap.cpp  test_nopython_pilot_syntax.cpp  test_nopython_pilot_theme.cpp  test_nopython_radixtree.cpp  test_nopython_rtree.cpp  test_nopython_serializable.cpp  test_nopython_signed_stride_layout.cpp  test_nopython_toggle.cpp  test_nopython_transform.cpp
include/: bulk.h  cese.h  cuse.h  gasdyn.h  lincese.h  lincuse.h  solvcon.h  vslin.h
libmarch/: .gitignore  BUILD.md  CMakeLists.txt
libmarch/cmake/: FindPythonAnaconda.cmake  FindSCOTCH.cmake
libmarch/include/: march.hpp
libmarch/include/march/: core.hpp  gas.hpp  march.hpp  mesh.hpp  python.hpp
libmarch/include/march/core/: Buffer.hpp  LookupTable.hpp  Matrix.hpp  Vector.hpp  core.hpp  memory.hpp  string.hpp  system.hpp  types.hpp  utility.hpp
libmarch/include/march/depend/: scotch.hpp
libmarch/include/march/gas/: Anchor.hpp  Jacobian.hpp  Parameter.hpp  Quantity.hpp  Solution.hpp  Solver.hpp  Solver_decl.hpp  Trim.hpp  calc_cfl.hpp  calc_soln.hpp  calc_solt.hpp  derivative.hpp  gas.hpp
libmarch/include/march/mesh/: BasicCE.hpp  Block.hpp  BoundaryData.hpp  CellType.hpp  CompoundCE.hpp  ConservationElement.hpp  LookupTable.hpp  UnstructuredBlock.hpp  mesh.hpp
libmarch/include/march/mesh/ConservationElement/: BasicCE.hpp  GradientElement.hpp
libmarch/include/march/mesh/UnstructuredBlock/: UnstructuredBlock.hpp  build_csr.hpp  build_faces_from_cells.hpp  build_rcells.hpp  calc_ce.hpp  calc_metric.hpp  calc_sf.hpp  class.hpp  fill_ghost.hpp  get_normal_matrix.hpp  hand.hpp
libmarch/include/march/python/: WrapBase.hpp  common.hpp  python.hpp  wrapper_core.hpp  wrapper_gas.hpp  wrapper_march.hpp  wrapper_mesh.hpp
libmarch/src/: CMakeLists.txt
libmarch/src/python/: CMakeLists.txt  march.cpp  march_gas.cpp
libmarch/tests/: CMakeLists.txt  core_Buffer.cpp  core_LookupTable.cpp  core_Vector.cpp  core_types.cpp  gas_main.cpp  main.cpp  mesh_BoundaryData.cpp  mesh_CellType.cpp  mesh_ConservationElement.cpp  mesh_LookupTable.cpp  mesh_UnstructuredBlock.cpp  mesh_fixture.hpp  update-gtest.sh
patch/: metislog2.patch
profiling/: profile_matrix_ops.py
soil/: Makefile  build-gcc.sh  build-gmp.sh  build-mpc.sh  build-mpfr.sh  create-scgccvars.sh  get  get.ini  scgccvars.csh  scgccvars.sh
solvcon/: .gitignore  SConscript  __init__.py  _march_bridge.pxd  _march_bridge.pyx  anchor.py  anchor_legacy.py  apputil.py  batch.py  batch_torque.py  block.py  block_legacy.py  boundcond.py  case.py  case_core.py  case_legacy.py  cloud.py  cmdutil.py  command.py  conf.py  conn.py  connection.py  core.py  dependency.py  domain.py  exception.py  fake_algorithm.pxd  fake_algorithm.pyx  fake_solver.py  gendata.py  helper.py  hook.py  hook_legacy.py  lincese_algorithm.pxd  lincese_algorithm.pyx  lincese_solver.py  march.cpp  march.pxd  march.pyx  mesh.pxd  (+15 more)
src/: solvcon.h
tests/: test_agent_backend.py  test_agent_backends_impl.py  test_agent_core.py  test_agent_draw.py  test_agent_draw_command.py  test_agent_draw_schema.py  test_agent_observe.py  test_agent_view_command.py  test_agent_window_command.py  test_agentdraw_schema.py  test_apputil.py  test_blas_lapack.py  test_buffer.py  test_command_framework.py  test_gmsh.py  test_linalg_eigen.py  test_matrix.py  test_pilot.py  test_pilot_2d.py  test_pilot_agent.py  test_pilot_agent_control.py  test_pilot_bar.py  test_pilot_camera_menu.py  test_pilot_domain_widget.py  test_pilot_draw_tool.py  test_pilot_entity_tree.py  test_pilot_menu_model.py  test_pilot_mesh.py  test_pilot_mesh_info.py  test_pilot_shortcut.py  test_pilot_solution_info.py  test_pilot_terminal.py  test_pilot_theme.py  test_pilot_toggle_action.py  test_pilot_tree_panel.py  test_pilot_window_menu.py  test_toggle.py  test_track_kalmanfilter.py  test_universe.py
utests.legacy/: test_ctypes.py
(+1156 files in other folders)
